# claude-trader-ibkr

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: crons.json  settings.json
.claude/agents/: ibkr-gateway-recovery.md  opportunity-finder.md  order-alert-manager.md  portfolio-conductor.md  portfolio-health.md  portfolio-manager.md  risk-monitor.md  scout.md  strategy-optimizer.md  system-improver.md  trade-analyst.md
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
.planning/code-researcher/: INDEX.md  MEMORY.md  codebase-overview.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.trader/: inverse_etfs.json  profile.json
docs/: docker-auth.md
docs/plans/: 2026-03-10-agent-first-trader-cli-design.md  2026-03-10-trader-cli-implementation.md  2026-03-16-trader-server-design.md  2026-03-16-trader-server.md
examples/: bracket.py  indicators_example.py  list_and_modify.py  news_demo.py  one_off.py  scheduled.py  simple_integration_test.py
scripts/: daily-report.py  gen_assets.py  ibkr-healthcheck.py  ibkr-reauth.py  ibkr-start.sh  news-fetcher.py  setup-crons.sh  start-gateway.sh  telegram-listener.py  test-sdk-auth.py  verify-watchlist-feeds.py  watchlist-signals.py
tests/: test_imports.py  test_packaging.py  tests_manual_mvp_smoke.py
tests/agents/: test_context.py  test_log.py
tests/unit/: test_adapter_base.py  test_bearish_trading.py  test_benzinga.py  test_cli_account.py  test_cli_market.py  test_cli_news_scrape.py  test_cli_orders.py  test_cli_pipeline.py  test_cli_root.py  (+38 more)
trader/: config.py  guard.py  notify.py
(+106 files in other folders)
