[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pandas>=2.2",
    "python-dotenv>=1.0,<2",
    "yfinance>=0.2",
]

[project.optional-dependencies]
tws = ["ib_insync>=0.9.86"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-mock>=3.12"]

[project.scripts]
trader = "trader.cli.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
